[gd_scene load_steps=7 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://TurnQueue.gd" type="Script" id=2]
[ext_resource path="res://ui/ui_navigation.gd" type="Script" id=3]
[ext_resource path="res://Mouse.gd" type="Script" id=4]
[ext_resource path="res://ui_hud.gd" type="Script" id=5]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/selecteur_moche.png-d2888fb7ecd3ec3e26f49846e3c44cca.stex"

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
mode = 1
cell_size = Vector2( 90, 50 )
cell_custom_transform = Transform2D( 0, 0, 0, 0, 0, 0 )
cell_tile_origin = 1
format = 1

[node name="TurnQueue" type="Node" parent="."]
script = ExtResource( 2 )

[node name="ui_navigation" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Mouse" type="Sprite" parent="ui_navigation"]
scale = Vector2( 0.395, 0.394 )
texture = SubResource( 1 )
offset = Vector2( 0, 63 )
script = ExtResource( 4 )

[node name="ui_hud" type="CanvasLayer" parent="."]
script = ExtResource( 5 )

[node name="EndTurnButton" type="Button" parent="ui_hud"]
margin_left = 800.0
margin_top = 495.0
margin_right = 963.0
margin_bottom = 561.0
text = "Fin du tour"

[node name="Plant1Button" type="Button" parent="ui_hud"]
margin_left = 240.637
margin_top = 460.402
margin_right = 334.637
margin_bottom = 561.402
text = "Plant 1"

